--- a/APITestFrameworkforBookingPlatform/pom.xml
+++ b/APITestFrameworkforBookingPlatform/pom.xml
@@ -86,9 +86,17 @@
          <version>RELEASE</version>
          <scope>test</scope>
      </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.1</version>
+            <scope>test</scope>
+        </dependency>
 
 
- </dependencies>
+
+
+    </dependencies>
 </project>
   
   
