--- a/APITestFrameworkforBookingPlatform/pom.xml
+++ b/APITestFrameworkforBookingPlatform/pom.xml
@@ -92,11 +92,15 @@
             <version>4.13.1</version>
             <scope>test</scope>
         </dependency>
-
-
+        <dependency>
+            <groupId>com.aventstack</groupId>
+            <artifactId>extentreports</artifactId>
+            <version>5.1.2</version>
+        </dependency>
 
 
     </dependencies>
+
 </project>
   
   
